<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">YoDown</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="YoDownHead">YoDown</string>
    <string name="YoDownDescription">Yo or be Yo\'ed!</string>
    <string name="existYoBtnDesc">Log in</string>
    <string name="createYoBtnDesc">Sign up with Yo Account</string>
    <string name="title_activity_create_user">Create new user</string>
    <string name="usernameHint">Yo Username</string>
    <string name="passwordHint">Yo Password</string>
    <string name="repasswordHint">Yo Re-password</string>
    <string name="formCreateBtn">Create user</string>
    <string name="formCreateTitle">Yo Create New User</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="loginTitle">Yo Log in</string>
    <string name="loginBtn">Log in</string>
    <string name="usernameCreateError">Please enter a valid username.</string>
    <string name="passwordCreateError1">Please enter a valid password.</string>
    <string name="passwordCreateError2">Passwords do not match.</string>
    <string name="createFail">Account creation failed.</string>
    <string name="createNotify">A Yo will be sent to you.</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="game_instruction">Yo!</string>
    <string name="checkBoxHint">Save login?</string>
    <string name="loginError">Error logging in.</string>
    <string name="createWarning">Yo! Set your password!</string>
    <string name="title_activity_high_score">HighScoreActivity</string>
    <string name="highScoreText">High Score</string>

</resources>
