<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.david.yodown.CreateUserActivity">

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHint"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:layout_marginTop="@dimen/form_vertical_margin"
        />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repasswordHint"
            android:layout_marginTop="@dimen/form_vertical_margin"
        />

        <TextView
            android:id="@+id/errorId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Color.RED"
            android:textColor="#f00"
        />

        <Button
            android:id="@+id/formCreateBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/formCreateBtn"
            android:layout_marginTop="@dimen/form_vertical_margin"
        />

    </LinearLayout>

</RelativeLayout>
