<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout
        android:id="@+id/Container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/titleHead"
            android:text="@string/YoDownHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/header_text_size"
            android:layout_centerHorizontal="true"
            />

        <TextView
            android:id="@+id/titleDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleHead"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/YoDownDescription"
            android:textSize="@dimen/paragraph_text_size"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/existYo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/titleDescription"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/existYoBtnDesc"
            android:layout_centerHorizontal="true"
            />

        <Button
            android:id="@+id/createYo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/existYo"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/createYoBtnDesc"
            android:layout_centerHorizontal="true"
            />
    </RelativeLayout>
</RelativeLayout>



