<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.david.yodown.LoginActivity">

    <LinearLayout
        android:id="@+id/loginContainer"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:textSize="@dimen/subHeader_text_size"
            android:layout_gravity="center"
            android:textStyle="bold"
        />

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/usernameHint"
            android:layout_marginTop="@dimen/activity_vertical_margin"
        />

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordHint"
            android:layout_marginTop="@dimen/form_vertical_margin"
            android:inputType="textPassword"
        />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/errorRed"
            android:gravity="right"
        />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/loginBtn"
            android:layout_marginTop="@dimen/form_vertical_margin"
        />

    </LinearLayout>

</RelativeLayout>
